# practical-path-guiding

./: .gitignore  LICENSE  README.md
visualizer/: CMakeLists.txt
visualizer/nanogui/: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  LICENSE.txt  README.md
visualizer/nanogui/docs/: compilation.rst  conf.py  contributing.rst  examples.rst  exhale.py  index.rst  mkdoc_rst.py  requirements.txt  usage.rst
visualizer/nanogui/docs/_static/collapse/: CollapsibleLists.compressed.js  tree_view.css
visualizer/nanogui/docs/_templates/: layout.html
visualizer/nanogui/ext/coro/: LICENSE  README  coro.c  coro.h
visualizer/nanogui/ext/eigen/: CMakeLists.txt  CTestCustom.cmake.in  INSTALL  eigen3.pc.in  signature_of_eigen3_matrix_library
visualizer/nanogui/ext/eigen/Eigen/: CMakeLists.txt  CholmodSupport  SPQRSupport  UmfPackSupport
visualizer/nanogui/ext/eigen/bench/: BenchSparseUtil.h  BenchTimer.h  BenchUtil.h  README.txt  basicbench.cxxlist  basicbenchmark.cpp  basicbenchmark.h  benchBlasGemm.cpp  benchCholesky.cpp  benchEigenSolver.cpp  benchFFT.cpp  benchGeometry.cpp  benchVecAdd.cpp  bench_gemm.cpp  bench_multi_compilers.sh  bench_norm.cpp  bench_reverse.cpp  bench_sum.cpp  bench_unrolling  benchmark.cpp  benchmarkSlice.cpp  benchmarkX.cpp  benchmarkXcwise.cpp  benchmark_suite  check_cache_queries.cpp  eig33.cpp  geometry.cpp  quat_slerp.cpp  (+11 more)
visualizer/nanogui/ext/glfw/: .gitignore  CMakeLists.txt  README.md
visualizer/nanogui/ext/nanovg/: .gitignore  README.md  premake4.lua
visualizer/nanogui/ext/pybind11/: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  setup.cfg  setup.py
visualizer/nanogui/include/nanogui/: button.h  checkbox.h  colorpicker.h  colorwheel.h  combobox.h  common.h  compat.h  entypo.h  formhelper.h  glcanvas.h  glutil.h  graph.h  imagepanel.h  imageview.h  label.h  layout.h  messagedialog.h  nanogui.h  object.h  opengl.h  popup.h  popupbutton.h  progressbar.h  python.h  screen.h  slider.h  stackedwidget.h  tabheader.h  tabwidget.h  textbox.h  theme.h  toolbutton.h  vscrollpanel.h  widget.h  window.h
visualizer/nanogui/python/: basics.cpp  button.cpp  constants.cpp  eigen.cpp  example1.py  example2.py  example3.py  example4.py  formhelper.cpp  glcanvas.cpp  glutil.cpp  layout.cpp  main.cpp  misc.cpp  nanovg.cpp  py_doc.h  python.h  tabs.cpp  textbox.cpp  widget.cpp
visualizer/nanogui/resources/: check-style.sh
visualizer/nanogui/src/: button.cpp  checkbox.cpp  colorpicker.cpp  colorwheel.cpp  combobox.cpp  common.cpp  darwin.mm  example1.cpp  example2.cpp  example3.cpp  example4.cpp  glcanvas.cpp  glutil.cpp  graph.cpp  imagepanel.cpp  imageview.cpp  label.cpp  layout.cpp  messagedialog.cpp  popup.cpp  popupbutton.cpp  progressbar.cpp  screen.cpp  serializer.cpp  slider.cpp  stackedwidget.cpp  tabheader.cpp  tabwidget.cpp  textbox.cpp  theme.cpp  vscrollpanel.cpp  widget.cpp  window.cpp
visualizer/src/: main.cpp
(+1255 files in other folders)
